gcc/testsuite/rust/rustc/ui/pattern/bindings-after-at/feature-gate-bindings_after_at.rs
fn main() {
    let x @ y = 0; // { dg-error ".E0658." "" { target *-*-* } }
}

